# control_algorithm_bench

./: .gitignore  CMakeLists.txt  README.md  experiments.py  main.py  pyproject.toml  train.py
envs/: CMakeLists.txt  _surface_env_cpp.pyi
envs/cpp/: bindings.cpp
src/: agent_factory.py  bindings.cpp  env.cpp  env.h  function_env.cpp  function_env.h  piecewise_functions.py
src/agents/: __init__.py  base.py  dqn_agent.py  hill_climb.py  ppo_agent.py  random_agent.py
src/envs/: __init__.py  surface_env.py
src/envs/cpp/: surface_env.cpp  surface_env.h
src/evaluator/: __init__.py  benchmark.py  runner.py  visualize.py
