[project]
name = "control-algorithm-bench"
version = "0.1.0"
description = "High-dimensional surface optimization RL benchmark with C++/pybind11 backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pybind11>=2.10",
    "matplotlib>=3.5",
    "torch>=2.8.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
